Major nav overhaul, few other cleanups and changes
- Changed Flat UI color names so its easier to remember
- Added some padding to the icon font
- Changed all old colors in form.less
- Removed styling from <hr> tag, queries messed it up
- Working on responsive nav bars, Collapsible to mobile
- Changed colors and added class names to text fields
- Added navigation bar triggering to responsive nav’s
- Removed whitespace in styles.less

--- a/flatui/color.less
+++ b/flatui/color.less
@@ -1,43 +1,43 @@
 /*Flat Colors*/
 
 //Red
-@alizarin:      #e74c3c;
-@pomegranate:   #c0392b;
+@red:           #e74c3c;
+@darkred:       #c0392b;
 
 //Orange
-@carrot:        #e67e22;
-@pumpkin:       #d35400;
+@orange:        #e67e22;
+@darkorange:    #d35400;
 
 //Yellow
-@sunflower:     #f1c40f;
-@darksunflower: #f39c12;
+@yellow:        #f1c40f;
+@darkyellow:    #f39c12;
 
 //Blue-Green
 @turquoise:     #1abc9c;
-@greensea:      #16a085;
+@darkturquoise: #16a085;
 
 //Green 
-@emerald:       #2ecc71;
-@nephritis:     #27ae60;
+@green:         #2ecc71;
+@darkgreen:     #27ae60;
 
 //Blue
-@peterriver:    #3498db;
-@belizehole:    #2980b9;
+@blue:          #3498db;
+@darkblue:      #2980b9;
 
 //Purple
-@amethyst:      #9b59b6;
-@wisteria:      #8e44ad;
+@purple:        #9b59b6;
+@darkpurple:    #8e44ad;
 
 //Blue-Gray
-@wetasphault:   #34495e;
+@nightblue:     #34495e;
 @midnightblue:  #2c3e50;
 
 //Gray
-@concrete:      #95a5a6;
-@asbestos:      #7f8c8d;
+@gray:          #95a5a6;
+@darkgray:      #7f8c8d;
 
 //Light-Gray
-@clouds:        #ecf0f1;
+@lightgray:     #ecf0f1;
 @silver:        #bdc3c7;
 
 //--------------------------
@@ -49,23 +49,25 @@
 
 //--------------------------
 //Color Shortcuts
-#alizarin        { background-color: @alizarin;}
-#pomegranate     { background-color: @pomegranate;}     
-#carrot          { background-color: @carrot;}      
-#pumpkin         { background-color: @pumpkin;}     
-#sunflower       { background-color: @sunflower;}       
-#darksunflower   { background-color: @darksunflower;}      
-#turquoise       { background-color: @turquoise;}        
-#greensea        { background-color: @greensea;}
-#emerald         { background-color: @emerald;}
-#nephritis       { background-color: @nephritis;}
-#peterriver      { background-color: @peterriver;}
-#belizehole      { background-color: @belizehole;}
-#amethyst        { background-color: @amethyst;}
-#wisteria        { background-color: @wisteria;}
-#clouds          { background-color: @clouds;}
-#silver          { background-color: @silver;}
-#concrete        { background-color: @concrete;}
-#asbestos        { background-color: @asbestos;}
-#wetasphault     { background-color: @wetasphault;}
-#midnightblue    { background-color: @midnightblue;}
+#red            { background-color: @red;}
+#darkred        { background-color: @darkred;}     
+#orange         { background-color: @orange;}      
+#darkorange     { background-color: @darkorange;}     
+#yellow         { background-color: @yellow;}       
+#darkyellow     { background-color: @darkyellow;}      
+#turquoise      { background-color: @turquoise;}        
+#darkturquoise  { background-color: @darkturquoise;}
+#green          { background-color: @green;}
+#darkgreen      { background-color: @darkgreen;}
+#blue           { background-color: @blue;}
+#darkblue       { background-color: @darkblue;}
+#purple         { background-color: @purple;}
+#darkpurple     { background-color: @darkpurple;}
+
+#lightgray      { background-color: @lightgray;}
+#silver         { background-color: @silver;}
+#gray           { background-color: @gray;}
+#darkgray       { background-color: @darkgray;}
+
+#nightblue      { background-color: @nightblue;}
+#midnightblue   { background-color: @midnightblue;}
