--- a/flatui/font.less
+++ b/flatui/font.less
@@ -18,6 +18,10 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+span:before {
+    padding-right: 4px;
+}
+
 .icon-home:before {
 	content: "\e600";
 }
