--- a/flatui/nav.less
+++ b/flatui/nav.less
@@ -1,21 +1,47 @@
 @import "color.less";
 @import "mixin.less";
 
-.nav_bar(@color: @peterriver) {
-    width: 100%;
+.nav_bar(@color: @blue) {
     background: @color;
-    overflow: hidden;
     font: 16px "Myriad Pro";
+    position: relative;
+    overflow: hidden;
+    .hidden {
+        width: 100%;
+        height: 50px;
+        display: none;
+        a {
+            color: darken(@color, 20%);
+            float: right;
+            display: block;
+            text-decoration: none;
+            width: 25px;
+            margin: 13px;
+            .transition(all, 0.1s);
+            span {
+                font-size: 26px;
+            }
+            &:hover {
+                color: lighten(@color, 20%);
+            }
+        }
+    }
     ul {
         overflow: hidden;
         list-style-type: none;
+        display: block;
         li {
             &:first-child {
                 border-left: none;
             }
-            &:last-child {
-                border-right: 1px solid lighten(@color, 10%);
+            &.nav-right {
+                min-width: 92px;
+                height: 40px;
+                line-height: 46px;
+                text-align: center;
+                float: right;
             }
+            background: @color;
             cursor: pointer;
             border-left: 1px solid lighten(@color, 10%);
             float: left;
@@ -42,10 +68,84 @@
     }
 }
 
-.navbar-reg {
+nav.regular {
     .nav_bar();
 }
 
-.navbar-green {
-    .nav_bar(@emerald);
+nav.green {
+    .nav_bar(@green);
 }
+
+//Feel free to add your own colors!
+//.navbar-yourcolor {
+//    .nav_bar(@yourcolor);
+//}
+
+/* #Above 
+================================================== */
+
+    /* Note: Design for a width above 959px */
+    @media only screen and (min-width: 959px) {
+        nav.responsive {
+            ul {
+                display: block !important;
+            }
+        }
+    }
+
+/* #Tablet (Portrait)
+================================================== */
+
+    /* Note: Design for a width of 768px */
+    @media only screen and (min-width: 768px) and (max-width: 959px) {
+        nav.responsive {
+            ul {
+                display: block !important;
+            }
+        }
+    }
+    
+/* #Mobile (Portrait)
+================================================== */
+
+    /* Note: Design for a width of 320px */
+    @media only screen and (max-width: 767px) {
+        nav.responsive {
+            overflow: visible;
+            .hidden {
+                display: block;
+            }
+            ul {
+                display: none;
+                position: absolute;
+                top: 50px;
+                li {
+                    display: block;
+                    float: left;
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+/* #Mobile (Landscape)
+================================================== */
+
+    /* Note: Design for a width of 480px */
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+        &.rounded {
+            .border-radius(0px);
+        }
+    }
+
+/* #Mobile (Portrait)
+================================================== */
+
+    /* Note: Design for a width of 320px */
+    @media only screen and (max-width: 479px) {
+        nav.responsive {
+            &.rounded {
+                .border-radius(0px);
+            }
+        }
+    }
