--- a/styles.css
+++ b/styles.css
@@ -554,10 +554,6 @@ or wrap each row of columns in a <div class="row"> */
 ================================================== */
 /* Note: Design for a width of 320px */
 @media only screen and (max-width: 767px) {
-  hr {
-    margin: 0 auto;
-    width: 100%;
-  }
   .hide_for_mobile {
     display: none;
   }
@@ -566,61 +562,61 @@ or wrap each row of columns in a <div class="row"> */
 ================================================== */
 /* Note: Design for a width of 480px */
 /*Flat Colors*/
-#alizarin {
+#red {
   background-color: #e74c3c;
 }
-#pomegranate {
+#darkred {
   background-color: #c0392b;
 }
-#carrot {
+#orange {
   background-color: #e67e22;
 }
-#pumpkin {
+#darkorange {
   background-color: #d35400;
 }
-#sunflower {
+#yellow {
   background-color: #f1c40f;
 }
-#darksunflower {
+#darkyellow {
   background-color: #f39c12;
 }
 #turquoise {
   background-color: #1abc9c;
 }
-#greensea {
+#darkturquoise {
   background-color: #16a085;
 }
-#emerald {
+#green {
   background-color: #2ecc71;
 }
-#nephritis {
+#darkgreen {
   background-color: #27ae60;
 }
-#peterriver {
+#blue {
   background-color: #3498db;
 }
-#belizehole {
+#darkblue {
   background-color: #2980b9;
 }
-#amethyst {
-  background-color: #9b59b6;
+#green {
+  background-color: #2ecc71;
 }
-#wisteria {
-  background-color: #8e44ad;
+#darkgreen {
+  background-color: #27ae60;
 }
-#clouds {
+#lightgray {
   background-color: #ecf0f1;
 }
 #silver {
   background-color: #bdc3c7;
 }
-#concrete {
+#gray {
   background-color: #95a5a6;
 }
-#asbestos {
+#darkgray {
   background-color: #7f8c8d;
 }
-#wetasphault {
+#nightblue {
   background-color: #34495e;
 }
 #midnightblue {
@@ -1154,32 +1150,32 @@ div.checkbox-purple input:checked:before {
   visibility: visible;
   opacity: 1;
 }
-.navbar-reg {
+nav.regular {
   width: 100%;
   background: #3498db;
   overflow: hidden;
   font: 16px "Myriad Pro";
 }
-.navbar-reg ul {
+nav.regular ul {
   overflow: hidden;
   list-style-type: none;
 }
-.navbar-reg ul li {
+nav.regular ul li {
   cursor: pointer;
   border-left: 1px solid #5faee3;
   float: left;
-  width: 92px;
+  min-width: 92px;
   height: 40px;
-  line-height: 40px;
+  line-height: 46px;
   text-align: center;
 }
-.navbar-reg ul li:first-child {
+nav.regular ul li:first-child {
   border-left: none;
 }
-.navbar-reg ul li:last-child {
+nav.regular ul li:last-child {
   border-right: 1px solid #5faee3;
 }
-.navbar-reg ul li a {
+nav.regular ul li a {
   display: block;
   width: 100%;
   height: 100%;
@@ -1191,36 +1187,40 @@ div.checkbox-purple input:checked:before {
   text-decoration: none;
   color: white;
 }
-.navbar-reg ul li a:hover {
+nav.regular ul li a:hover {
   color: #217dbb;
   background-color: #4aa3df;
 }
-.navbar-green {
+nav.regular ul li a.active {
+  color: #1d6fa5;
+  background-color: #5faee3;
+}
+nav.green {
   width: 100%;
   background: #2ecc71;
   overflow: hidden;
   font: 16px "Myriad Pro";
 }
-.navbar-green ul {
+nav.green ul {
   overflow: hidden;
   list-style-type: none;
 }
-.navbar-green ul li {
+nav.green ul li {
   cursor: pointer;
   border-left: 1px solid #54d98c;
   float: left;
-  width: 92px;
+  min-width: 92px;
   height: 40px;
-  line-height: 40px;
+  line-height: 46px;
   text-align: center;
 }
-.navbar-green ul li:first-child {
+nav.green ul li:first-child {
   border-left: none;
 }
-.navbar-green ul li:last-child {
+nav.green ul li:last-child {
   border-right: 1px solid #54d98c;
 }
-.navbar-green ul li a {
+nav.green ul li a {
   display: block;
   width: 100%;
   height: 100%;
@@ -1232,10 +1232,23 @@ div.checkbox-purple input:checked:before {
   text-decoration: none;
   color: white;
 }
-.navbar-green ul li a:hover {
+nav.green ul li a:hover {
   color: #25a25a;
   background-color: #40d47e;
 }
+nav.green ul li a.active {
+  color: #208e4e;
+  background-color: #54d98c;
+}
+/* #Tablet (Portrait)
+================================================== */
+/* Note: Design for a width of 768px */
+/* #Mobile (Portrait)
+================================================== */
+/* Note: Design for a width of 320px */
+/* #Mobile (Landscape)
+================================================== */
+/* Note: Design for a width of 480px */
 /* #Import a font
 ================================================== */
 @font-face {
