--- a/flatui/nav.less
+++ b/flatui/nav.less
@@ -13,10 +13,9 @@
         a {
             color: darken(@color, 20%);
             float: right;
-            display: block;
             text-decoration: none;
             width: 25px;
-            margin: 13px;
+            margin: 13px 13px 0 0;
             .transition(all, 0.1s);
             span {
                 font-size: 26px;
