--- a/styles.less
+++ b/styles.less
@@ -16,7 +16,6 @@
 /* #Regular Code
 ================================================== */
 body {
-    opacity: 0;
     h1 {
         font: 36px "Corbel";
         margin-top: 5px;
@@ -82,5 +81,21 @@ div#title {
         }
     }
 }
+
+#icons {
+    span {
+        font-size: 26px;
+        padding: 10px;
+    }
+    p {
+        font-size: 40px;
+    }
+}
+
+
+
+
+
+
 
 
