--- a/flatui/nav.css
+++ b/flatui/nav.css
@@ -103,7 +103,7 @@
 /* #Font Loading
 ================================================== */
 nav.regular {
-  background: #3498db;
+  background: #95a5a6;
   font: 16px "Myriad Pro";
   position: relative;
   overflow: hidden;
@@ -114,7 +114,7 @@ nav.regular .hidden {
   display: none;
 }
 nav.regular .hidden a {
-  color: #196090;
+  color: #617374;
   float: right;
   text-decoration: none;
   width: 25px;
@@ -129,7 +129,7 @@ nav.regular .hidden a span {
   font-size: 26px;
 }
 nav.regular .hidden a:hover {
-  color: #8bc4ea;
+  color: #ccd4d5;
 }
 nav.regular ul {
   overflow: hidden;
@@ -137,9 +137,9 @@ nav.regular ul {
   display: block;
 }
 nav.regular ul li {
-  background: #3498db;
+  background: #95a5a6;
   cursor: pointer;
-  border-left: 1px solid #5faee3;
+  border-left: 1px solid #b1bdbd;
   float: left;
   min-width: 92px;
   height: 40px;
@@ -169,12 +169,12 @@ nav.regular ul li a {
   color: white;
 }
 nav.regular ul li a:hover {
-  color: #217dbb;
-  background-color: #4aa3df;
+  color: #798d8f;
+  background-color: #a3b1b2;
 }
 nav.regular ul li a.active {
-  color: #1d6fa5;
-  background-color: #5faee3;
+  color: #6d8082;
+  background-color: #b1bdbd;
 }
 nav.green {
   background: #2ecc71;
@@ -250,11 +250,163 @@ nav.green ul li a.active {
   color: #208e4e;
   background-color: #54d98c;
 }
+nav.red {
+  background: #e74c3c;
+  font: 16px "Myriad Pro";
+  position: relative;
+  overflow: hidden;
+}
+nav.red .hidden {
+  width: 100%;
+  height: 50px;
+  display: none;
+}
+nav.red .hidden a {
+  color: #a82315;
+  float: right;
+  text-decoration: none;
+  width: 25px;
+  margin: 13px 13px 0 0;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
+  -ms-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
+nav.red .hidden a span {
+  font-size: 26px;
+}
+nav.red .hidden a:hover {
+  color: #f29f97;
+}
+nav.red ul {
+  overflow: hidden;
+  list-style-type: none;
+  display: block;
+}
+nav.red ul li {
+  background: #e74c3c;
+  cursor: pointer;
+  border-left: 1px solid #ed7669;
+  float: left;
+  min-width: 92px;
+  height: 40px;
+  line-height: 46px;
+  text-align: center;
+}
+nav.red ul li:first-child {
+  border-left: none;
+}
+nav.red ul li.nav-right {
+  min-width: 92px;
+  height: 40px;
+  line-height: 46px;
+  text-align: center;
+  float: right;
+}
+nav.red ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  text-decoration: none;
+  color: white;
+}
+nav.red ul li a:hover {
+  color: #d62c1a;
+  background-color: #ea6153;
+}
+nav.red ul li a.active {
+  color: #bf2718;
+  background-color: #ed7669;
+}
+nav.off-canvas {
+  background: #95a5a6;
+  font: 16px "Myriad Pro";
+  overflow: hidden;
+}
+nav.off-canvas .hidden {
+  width: 100%;
+  height: 50px;
+  display: none;
+}
+nav.off-canvas .hidden a {
+  color: #617374;
+  float: left;
+  text-decoration: none;
+  width: 25px;
+  margin: 13px 13px 0 0;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
+  -ms-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
+nav.off-canvas .hidden a span {
+  font-size: 26px;
+}
+nav.off-canvas .hidden a:hover {
+  color: #ccd4d5;
+}
+nav.off-canvas ul {
+  overflow: hidden;
+  list-style-type: none;
+  display: block;
+  background-color: #95a5a6;
+}
+nav.off-canvas ul li {
+  background: #95a5a6;
+  cursor: pointer;
+  border-left: 1px solid #b1bdbd;
+  float: left;
+  min-width: 92px;
+  height: 40px;
+  line-height: 46px;
+  text-align: center;
+}
+nav.off-canvas ul li:first-child {
+  border-left: none;
+  display: none;
+}
+nav.off-canvas ul li.nav-right {
+  min-width: 92px;
+  height: 40px;
+  line-height: 46px;
+  text-align: center;
+  float: right;
+}
+nav.off-canvas ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  text-decoration: none;
+  color: white;
+}
+nav.off-canvas ul li a:hover {
+  color: #798d8f;
+  background-color: #a3b1b2;
+}
+nav.off-canvas ul li a.active {
+  color: #6d8082;
+  background-color: #b1bdbd;
+}
 /* #Above 
 ================================================== */
 /* Note: Design for a width above 959px */
 @media only screen and (min-width: 959px) {
   nav.responsive ul {
+    display: block !important;
+  }
+  nav.off-canvas ul {
     display: block !important;
   }
 }
@@ -263,6 +415,9 @@ nav.green ul li a.active {
 /* Note: Design for a width of 768px */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
   nav.responsive ul {
+    display: block !important;
+  }
+  nav.off-canvas ul {
     display: block !important;
   }
 }
@@ -285,6 +440,40 @@ nav.green ul li a.active {
     display: block;
     float: left;
     width: 100%;
+  }
+  nav.off-canvas .hidden {
+    display: block;
+  }
+  nav.off-canvas ul {
+    position: fixed;
+    width: 35%;
+    height: 100%;
+    left: -35%;
+    top: 0;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+  }
+  nav.off-canvas ul:target {
+    left: 0px;
+  }
+  nav.off-canvas ul li {
+    box-sizing: border-box;
+    margin-left: 10px;
+    border-left: none;
+    border-bottom: 1px solid #7f8c8d;
+    text-align: left;
+    display: block;
+    float: left;
+    width: 100%;
+  }
+  nav.off-canvas ul li:first-child {
+    display: block;
+  }
+  nav.off-canvas ul li.nav-right {
+    text-align: left;
   }
 }
 /* #Mobile (Landscape)
