--- a/flatui/nav.less
+++ b/flatui/nav.less
@@ -1,7 +1,7 @@
 @import "color.less";
 @import "mixin.less";
 
-.nav_bar(@color: @blue) {
+.nav-bar(@color: @gray) {
     background: @color;
     font: 16px "Myriad Pro";
     position: relative;
@@ -67,12 +67,88 @@
     }
 }
 
+.off-canvas(@color: @gray) {
+    background: @color;
+    font: 16px "Myriad Pro";
+    overflow: hidden;
+    .hidden {
+        width: 100%;
+        height: 50px;
+        display: none;
+        a {
+            color: darken(@color, 20%);
+            float: left;
+            text-decoration: none;
+            width: 25px;
+            margin: 13px 13px 0 0;
+            .transition(all, 0.1s);
+            span {
+                font-size: 26px;
+            }
+            &:hover {
+                color: lighten(@color, 20%);
+            }
+        }
+    }
+    ul {
+        overflow: hidden;
+        list-style-type: none;
+        display: block;
+        background-color: @color;
+        li {
+            &:first-child {
+                border-left: none;
+                display: none;
+            }
+            &.nav-right {
+                min-width: 92px;
+                height: 40px;
+                line-height: 46px;
+                text-align: center;
+                float: right;
+            }
+            background: @color;
+            cursor: pointer;
+            border-left: 1px solid lighten(@color, 10%);
+            float: left;
+            min-width: 92px;
+            height: 40px;
+            line-height: 46px;
+            text-align: center;
+            a {
+                display: block;
+                .size(100%, 100%);
+                .transition(all, 0.3s);
+                &:hover {
+                    color: darken(@color, 10%);
+                    background-color: lighten(@color, 5%);
+                }
+                text-decoration: none;
+                color: white;
+                &.active {
+                    color: darken(@color, 15%);
+                    background-color: lighten(@color, 10%);
+                }
+            }
+        }
+    }
+}
+
 nav.regular {
-    .nav_bar();
+    //regular defaults to blue
+    .nav-bar();
 }
 
 nav.green {
-    .nav_bar(@green);
+    .nav-bar(@green);
+}
+
+nav.red {
+    .nav-bar(@red);
+}
+
+nav.off-canvas {
+    .off-canvas();
 }
 
 //Feel free to add your own colors!
@@ -90,6 +166,12 @@ nav.green {
                 display: block !important;
             }
         }
+        nav.off-canvas {
+            ul {
+                display: block !important;
+            }
+        }
+        
     }
 
 /* #Tablet (Portrait)
@@ -98,6 +180,11 @@ nav.green {
     /* Note: Design for a width of 768px */
     @media only screen and (min-width: 768px) and (max-width: 959px) {
         nav.responsive {
+            ul {
+                display: block !important;
+            }
+        }
+        nav.off-canvas {
             ul {
                 display: block !important;
             }
@@ -122,6 +209,39 @@ nav.green {
                     display: block;
                     float: left;
                     width: 100%;
+                }
+            }
+        }
+        
+        nav.off-canvas {
+            .hidden {
+                display: block;
+            }
+            ul {
+                position: fixed;
+                width: 35%;
+                height: 100%;
+                left: -35%;
+                top: 0;
+                .transition(all, 0.3s, ease-out);
+                &:target {
+                    left: 0px;
+                }
+                li {
+                    &:first-child {
+                        display: block;
+                    }
+                    box-sizing: border-box;
+                    margin-left: 10px;
+                    border-left: none;
+                    border-bottom: 1px solid @darkgray;
+                    text-align: left;
+                    display: block;
+                    float: left;
+                    width: 100%;
+                    &.nav-right {
+                        text-align: left;
+                    }
                 }
             }
         }
