added in bg color classes

--- a/flatui/color.less
+++ b/flatui/color.less
@@ -45,29 +45,25 @@
 //Or load your own colors!
 //@cool-color:  #BADA55;
 
-
-
 //--------------------------
 //Color Shortcuts
-#red            { background-color: @red;}
-#darkred        { background-color: @darkred;}     
-#orange         { background-color: @orange;}      
-#darkorange     { background-color: @darkorange;}     
-#yellow         { background-color: @yellow;}       
-#darkyellow     { background-color: @darkyellow;}      
-#turquoise      { background-color: @turquoise;}        
-#darkturquoise  { background-color: @darkturquoise;}
-#green          { background-color: @green;}
-#darkgreen      { background-color: @darkgreen;}
-#blue           { background-color: @blue;}
-#darkblue       { background-color: @darkblue;}
-#purple         { background-color: @purple;}
-#darkpurple     { background-color: @darkpurple;}
-
-#lightgray      { background-color: @lightgray;}
-#silver         { background-color: @silver;}
-#gray           { background-color: @gray;}
-#darkgray       { background-color: @darkgray;}
-
-#nightblue      { background-color: @nightblue;}
-#midnightblue   { background-color: @midnightblue;}
+.bg-red            { background-color: @red;}
+.bg-darkred        { background-color: @darkred;}     
+.bg-orange         { background-color: @orange;}      
+.bg-darkorange     { background-color: @darkorange;}     
+.bg-yellow         { background-color: @yellow;}       
+.bg-darkyellow     { background-color: @darkyellow;}      
+.bg-turquoise      { background-color: @turquoise;}        
+.bg-darkturquoise  { background-color: @darkturquoise;}
+.bg-green          { background-color: @green;}
+.bg-darkgreen      { background-color: @darkgreen;}
+.bg-blue           { background-color: @blue;}
+.bg-darkblue       { background-color: @darkblue;}
+.bg-purple         { background-color: @purple;}
+.bg-darkpurple     { background-color: @darkpurple;}
+.bg-lightgray      { background-color: @lightgray;}
+.bg-silver         { background-color: @silver;}
+.bg-gray           { background-color: @gray;}
+.bg-darkgray       { background-color: @darkgray;}
+.bg-nightblue      { background-color: @nightblue;}
+.bg-midnightblue   { background-color: @midnightblue;}
