--- a/flatui/nav.less
+++ b/flatui/nav.less
@@ -112,6 +112,7 @@
             border-left: 1px solid lighten(@color, 10%);
             float: left;
             min-width: 92px;
+			padding: 0 3px;
             height: 40px;
             line-height: 46px;
             text-align: center;
